[tool.poetry]
name = "podaac-concise"
version = "0.6.0"
description = "Harmony service that merges granules"
authors = ["podaac-tva <podaac-tva@jpl.nasa.gov>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/podaac/concise"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
exclude = ['contrib', 'docs', 'tests', 'stress_test']
packages = [
    { include = "podaac" },
]

[tool.poetry.dependencies]
python = "^3.9"
netCDF4 = "^1.5.6"
numpy = "^1.20.3"
harmony-service-lib = "^1.0.20"
importlib-metadata = "^6.0.0"

[tool.poetry.group.dev.dependencies]
setuptools = "^66.0.0"
pytest = "~7"
flake8 = "~6"
pytest-cov = "~4"
pylint = "~2"
Sphinx = "^4.0"
requests = "^2.25.1"
sphinx-rtd-theme = "^1.0"
papermill = "^2.3.4"

[tool.poetry.scripts]
merge = 'podaac.merger.merge_cli:main'
concise_harmony = 'podaac.merger.harmony.cli:main'
benchmark = 'stress_test.benchmark:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
